--- a/styles/main.scss
+++ b/styles/main.scss
@@ -117,7 +117,45 @@ body {
   }
 }
 
+.btn {
+  padding-right: 50px;
+  height: 120px;
+  background-color: rgba(151, 193, 60, 1);
+  box-shadow: 5px 9px 10px rgba(0, 0, 0, 0.13);
+  position: relative;
+  padding-left: 125px;
+  border: none;
+  font-weight: 500;
+  outline: none;
+  text-align: left;
+  text-transform: uppercase;
+  font-family: "Proxima Nova", serif;
+  cursor: pointer;
+  border-radius: 5px;
+  
+  :hover {
+    background-color: rgba(151, 193, 60, .9);
+  }
+  
+  &::before {
+    content: "";
+    position: absolute;
+    width: 64px;
+    height: 60px;
+    top: 28px;
+    left: 34px;
+  }
+}
+
 /*------------------------------*/
+
+.btn-next, .btn-prev {
+  background-color: transparent;
+  border: none;
+  outline: none;
+  padding: 10px 20px;
+  cursor: pointer;
+}
 
 .banner__section {
 
@@ -174,6 +212,10 @@ body {
   align-items: center;
   justify-content: center;
   height: 100%;
+  
+  img {
+    display: block;
+  }
 }
 
 .slider__btn {
@@ -182,15 +224,9 @@ body {
 }
 
 .btn-slider {
-  background-color: transparent;
-  padding: 20px;
-  cursor: pointer;
-  
-  img {
-    display: block;
-    z-index: 5;
-    width: 100%;
-    background-color: #ffffff;
+  background-color: #97c13c;
+  &::before {
+    background-image: url("../images/note.svg");
   }
 }
 
@@ -212,30 +248,7 @@ body {
   padding: 80px 60px 53px;
 }
 
-.btn {
-  width: 516px;
-  height: 120px;
-  box-shadow: 5px 9px 10px rgba(0, 0, 0, 0.13);
-  background-color: #97c13c;
-  position: relative;
-  padding-left: 125px;
-  color: #ffffff;
-  border: none;
-  
-  text-align: left;
-  text-transform: uppercase;
-  font-family: "Proxima Nova - Semibold", serif;
-  
-  &::before {
-    content: "";
-    background-image: url("../images/note.svg");
-    position: absolute;
-    width: 64px;
-    height: 60px;
-    top: 28px;
-    left: 34px;
-  }
-}
+
 
 // ------------------------------------------
 
@@ -271,6 +284,22 @@ body {
 .project-inquiry {
   background-color: #f95353;
 }
+
+.call-action__btn {
+  background-color: #97c13c;
+  
+  &::before {
+    background-image: url("../images/note.svg");
+  }
+}
+.project-inquiry__btn {
+  background-color: #ffffff;
+  color: rgba(249, 83, 83, 1);
+  &::before {
+    background-image: url("../images/banknote.svg");
+  }
+}
+
 
 //----------------------------------------
 
@@ -384,6 +413,8 @@ body {
 }
 
 
+
+
 .footer__bottom {
   padding-top: 165px;
   
@@ -435,9 +466,15 @@ body {
     padding: 0 34px;
   }
   
-  
 }
 
+.btn-form {
+  background-color: #ffffff;
+  color: rgba(244, 146, 68, 1);
+  &::before {
+    background-image: url("../images/paperplane.svg");
+  }
+}
 
 .footer__date {
   font-size: 36px;
