--- a/styles/_fonts.scss
+++ b/styles/_fonts.scss
@@ -1,1 +1,18 @@
+@font-face {
+  font-family: 'Proxima Nova Bold';
+  src: url('../fonts/proxima_nova_bold.eot'); /* IE 9 Compatibility Mode */
+  src: url('../fonts/proxima_nova_bold.eot?#iefix') format('embedded-opentype'), /* IE < 9 */
+  url('../fonts/proxima_nova_bold.woff2') format('woff2'), /* Super Modern Browsers */
+  url('../fonts/proxima_nova_bold.woff') format('woff'), /* Firefox >= 3.6, any other modern browser */
+  url('../fonts/proxima_nova_bold.ttf') format('truetype'), /* Safari, Android, iOS */
+  url('../fonts/proxima_nova_bold.svg#proxima_nova_bold') format('svg'); /* Chrome < 4, Legacy iOS */
+}
 
+@font-face {
+  font-family: 'Proxima Nova';
+  src: url('../fonts/ProximaNova-Regular.eot'); /* IE 9 Compatibility Mode */
+  src: url('../fonts/ProximaNova-Regular.eot?#iefix') format('embedded-opentype'), /* IE < 9 */
+  url('../fonts/ProximaNova-Regular.woff') format('woff'), /* Firefox >= 3.6, any other modern browser */
+  url('../fonts/ProximaNova-Regular.ttf') format('truetype'), /* Safari, Android, iOS */
+  url('../fonts/ProximaNova-Regular.svg#proxima_nova_bold') format('svg'); /* Chrome < 4, Legacy iOS */
+}
