--- a/styles/main.css
+++ b/styles/main.css
@@ -382,31 +382,106 @@ p {
 }
 
 .container {
-  width: 2456px;
+  max-width: 2456px;
   margin: 0 auto;
   padding: 0 288px;
+  border: 1px solid green;
+}
+@media screen and (max-width: 1900px) {
+  .container {
+    max-width: 1860px;
+    padding: 0 120px;
+  }
+}
+@media screen and (max-width: 1400px) {
+  .container {
+    max-width: 1200px;
+    padding: 0 60px;
+  }
+}
+@media screen and (max-width: 1200px) {
+  .container {
+    max-width: 992px;
+    padding: 0 60px;
+  }
+}
+@media screen and (max-width: 992px) {
+  .container {
+    max-width: 768px;
+    padding: 0 30px;
+  }
+}
+@media screen and (max-width: 576px) {
+  .container {
+    max-width: none;
+    padding: 0 15px;
+  }
 }
 
 body {
-  font-size: 26px;
+  font-size: 32px;
   font-weight: 400;
   background-color: #30323a;
   font-family: "Proxima Nova", serif;
+}
+@media (max-width: 1900px) {
+  body {
+    font-size: 20px;
+  }
+}
+@media (max-width: 1400px) {
+  body {
+    font-size: 16px;
+  }
 }
 
 .header__inner {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 212px;
+  max-height: 212px;
+  padding: 97px 0;
+}
+@media (max-width: 1900px) {
+  .header__inner {
+    padding: 50px 0;
+  }
+}
+@media (max-width: 1200px) {
+  .header__inner {
+    padding: 25px 0;
+  }
 }
 .header__logo {
-  width: 230px;
+  max-width: 230px;
+}
+.header__logo img {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+@media (max-width: 1900px) {
+  .header__logo {
+    max-width: 150px;
+  }
 }
 .header__menu {
   display: flex;
   align-items: center;
   color: #ffffff;
+}
+@media (max-width: 700px) {
+  .header__menu {
+    display: none;
+  }
+}
+.header__menu-burger {
+  display: none;
+}
+@media (max-width: 700px) {
+  .header__menu-burger {
+    display: block;
+  }
 }
 .header__link {
   color: #ffffff;
@@ -434,10 +509,20 @@ body {
   caret-color: #ffffff;
   color: #ffffff;
   background: url("../images/search.png") no-repeat right;
-  width: 298px;
-  padding-right: 50px;
-  padding-left: 10px;
-  padding-bottom: 15px;
+  background-size: 32px;
+  max-width: 298px;
+  padding: 0 40px 15px 10px;
+}
+@media (max-width: 1900px) {
+  .header__search-input {
+    background-size: 26px;
+    padding: 0 30px 10px 5px;
+  }
+}
+@media (max-width: 991.98px) {
+  .header__search {
+    display: none;
+  }
 }
 
 .btn {
