--- a/styles/main.scss
+++ b/styles/main.scss
@@ -36,54 +36,113 @@ p {
 }
 
 .container {
-  width: 2456px;
+  max-width: 2456px;
   margin: 0 auto;
   padding: 0 288px;
+  border: 1px solid green;
+
+  @media screen and (max-width: 1900px) {
+    max-width: 1860px;
+    padding: 0 120px;
+  }
+  @media screen and (max-width: 1400px) {
+    max-width: 1200px;
+    padding: 0 60px;
+  }
+  @media screen and (max-width: 1200px) {
+    max-width: 992px;
+    padding: 0 60px;
+
+  }
+  @media screen and (max-width: 992px) {
+    max-width: 768px;
+    padding: 0 30px;
+  }
+  @media screen and (max-width: 576px) {
+    max-width: none;
+    padding: 0 15px;
+  }
 }
 
 
 body {
-  font-size: 26px;
+  font-size: 32px;
   font-weight: 400;
   background-color: #30323a;
   font-family: "Proxima Nova", serif;
+
+  @media (max-width: 1900px) {
+    font-size: 20px;
+  }
+  @media (max-width: 1400px) {
+    font-size: 16px;
+  }
 }
 
 .header {
-  
+
   &__inner {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 212px;
+    max-height: 212px;
+    padding: 97px 0;
+
+    @media (max-width: 1900px) {
+      padding: 50px 0;
+    }
+
+    @media (max-width: 1200px) {
+      padding: 25px 0;
+    }
   }
-  
+
   &__logo {
-    width: 230px;
+    max-width: 230px;
+
+    img {
+      object-fit: cover;
+      width: 100%;
+      height: 100%;
+    }
+
+    @media (max-width: 1900px) {
+      max-width: 150px;
+    }
   }
-  
+
   &__menu {
     display: flex;
     align-items: center;
     color: #ffffff;
+
+    @media (max-width: 700px) {
+      display: none;
+    }
+
+    &-burger {
+      display: none;
+      @media (max-width: 700px) {
+        display: block;
+      }
+    }
   }
-  
+
   &__link {
     color: #ffffff;
     font-family: Gotham, serif;
     text-align: left;
     padding: 18px 0;
   }
-  
+
   &__list {
     padding: 18px 0;
   }
-  
+
   &__link:hover {
     border-bottom: 4px solid #97c13c;
   }
-  
-  
+
 }
 
 .header__list + .header__list {
@@ -92,11 +151,7 @@ body {
 
 .header__search {
   border-bottom: 1px solid #45474e;
-  
-  label {
-  
-  }
-  
+
   &-input {
     //background: transparent;
     border: none;
@@ -104,12 +159,20 @@ body {
     caret-color: #ffffff;
     color: #ffffff;
     background: url("../images/search.png") no-repeat right;
-    width: 298px;
-    padding-right: 50px;
-    padding-left: 10px;
-    padding-bottom: 15px;
+    background-size: 32px;
+    max-width: 298px;
+    padding: 0 40px 15px 10px;
+
+    @media (max-width: 1900px) {
+      background-size: 26px;
+      padding: 0 30px 10px 5px;
+    }
+
   }
-  
+  @media (max-width: 991.98px) {
+   display: none;
+  }
+
 }
 
 .btn {
@@ -127,11 +190,11 @@ body {
   font-family: "Proxima Nova", serif;
   cursor: pointer;
   border-radius: 5px;
-  
+
   :hover {
     background-color: rgba(151, 193, 60, .9);
   }
-  
+
   &::before {
     content: "";
     position: absolute;
@@ -185,7 +248,7 @@ body {
   margin-right: 19px;
   border-radius: 5px;
   z-index: 5;
-  
+
   &::before {
     content: "";
     display: block;
@@ -207,7 +270,7 @@ body {
   align-items: center;
   justify-content: center;
   height: 100%;
-  
+
   img {
     display: block;
   }
@@ -241,7 +304,6 @@ body {
 }
 
 
-
 // ------------------------------------------
 
 .section__wrap {
@@ -249,13 +311,13 @@ body {
 }
 
 .call-action, .project-inquiry {
-  
+
   &__inner {
     text-align: center;
     color: #ffffff;
     font-family: "Proxima Nova", serif;
   }
-  
+
   &__title {
     font-size: 56px;
     font-weight: 700;
@@ -264,7 +326,7 @@ body {
     letter-spacing: 1.12px;
     margin-bottom: 68px;
   }
-  
+
   &__description {
     font-size: 32px;
     font-weight: 400;
@@ -280,6 +342,7 @@ body {
 .call-action__btn {
   @include button-bg-icon(#97c13c, #ffffff, "../images/note.svg");
 }
+
 .project-inquiry__btn {
   @include button-bg-icon(#ffffff, #f95353, "../images/banknote.svg");
 }
@@ -291,7 +354,7 @@ body {
 .footer-top {
   min-height: 924px;
   background: #e8e8e8 url(../images/map.jpg) repeat-x center;
-  
+
   &__inner {
     display: flex;
     justify-content: space-between;
@@ -300,9 +363,9 @@ body {
 }
 
 .address {
-  
+
   &__list {
-    
+
     &-title {
       font-size: 28px;
       color: rgba(255, 255, 255, .5);
@@ -310,7 +373,7 @@ body {
       text-transform: uppercase;
     }
   }
-  
+
   &__link {
     color: #ffffff;
     font-size: 28px;
@@ -319,28 +382,28 @@ body {
     line-height: 64px;
     letter-spacing: 0.56px;
   }
-  
+
   &__list {
     width: 250px;
-    
+
     &-address {
       margin-bottom: 80px;
     }
-    
+
     &-phone {
       margin-bottom: 50px;
     }
   }
-  
-  
+
+
   &__address__address {
-  
+
   }
 }
 
 .social {
   display: inline-block;
-  
+
   &__link {
     display: inline-block;
     color: #ffffff;
@@ -353,7 +416,7 @@ body {
 
 .form {
   text-align: left;
-  
+
   &__text, &__name, &__email {
     background-color: rgba(255, 255, 255, .1);
     padding: 0 20px 0 40px;
@@ -361,16 +424,16 @@ body {
     outline: none;
     caret-color: #ffffff;
     color: #ffffff;
-    
+
     &::placeholder {
       color: #ffffff;
       font-size: 24px;
       line-height: 36px;
       text-transform: uppercase;
-      
+
     }
   }
-  
+
   &__text {
     width: 1240px;
     height: 317px;
@@ -378,23 +441,23 @@ body {
     resize: none;
     margin-bottom: 39px;
   }
-  
+
   &__name {
     width: 600px;
     height: 103px;
     margin-bottom: 38px;
   }
-  
+
   &__email {
     width: 600px;
     height: 103px;
   }
-  
+
   &__box {
     display: flex;
     justify-content: space-between;
   }
-  
+
   &__btn {
     @include button-bg-icon(#ffffff, #f49244, "../images/paperplane.svg");
   }
@@ -403,25 +466,25 @@ body {
 
 .footer__bottom {
   padding-top: 165px;
-  
+
   &-inner {
     display: flex;
     justify-content: space-between;
   }
-  
+
   &-left {
     text-align: left;
   }
-  
+
   &-right {
     text-align: right;
     width: 570px;
   }
-  
+
   &-btn-box {
     display: flex;
   }
-  
+
   &-phone {
     color: #ffffff;
     font-size: 52px;
@@ -431,7 +494,7 @@ body {
     display: block;
     margin-bottom: 51px;
   }
-  
+
   &-mail {
     width: 460px;
     color: #ffffff;
@@ -442,7 +505,7 @@ body {
     display: block;
     margin-bottom: 69px;
   }
-  
+
   &-btn {
     margin-bottom: 125px;
     box-shadow: 5px 9px 10px rgba(0, 0, 0, 0.13);
@@ -451,9 +514,8 @@ body {
     line-height: 100px;
     padding: 0 34px;
   }
-  
-}
 
+}
 
 
 .footer__date {
