--- a/styles/_mixins.scss
+++ b/styles/_mixins.scss
@@ -1,11 +1,11 @@
 @mixin button-bg-icon($bg, $color, $icon) {
   background: $bg;
-  height: 120px;
   box-shadow: 5px 9px 10px rgba(0, 0, 0, 0.13);
   position: relative;
-  padding-left: 125px;
-  padding-right: 50px;
+  padding: 50px 50px 50px 125px;
   color: $color;
+  max-width: 516px;
+  font-size: 0.93em;
   border: none;
   outline: none;
   text-transform: uppercase;
@@ -13,15 +13,26 @@
   cursor: pointer;
   border-radius: 5px;
   transition: all 0.3s ease;
-  
+
+  @media (max-width: 1200px) {
+    padding: 25px 25px 25px 62.5px;
+
+  }
+
   &::before {
     content: "";
-    background-image: url($icon);
+    background: url($icon) no-repeat;
+    background-size: contain;
     position: absolute;
     width: 64px;
     height: 60px;
-    top: 28px;
-    left: 34px;
+    top: 25%;
+    left: 8%;
+
+    @media (max-width: 1200px) {
+      width: 32px;
+      height: 30px;
+    }
   }
   &:hover {
     background:darken($bg,8%);
