--- a/styles/main.scss
+++ b/styles/main.scss
@@ -66,16 +66,17 @@ p {
 
 
 body {
-  font-size: 32px;
+  font-size: 28px;
+  line-height: 32px;
   font-weight: 400;
   background-color: #30323a;
   font-family: "Proxima Nova", serif;
 
   @media (max-width: 1900px) {
-    font-size: 20px;
+    font-size: 24px;
   }
   @media (max-width: 1400px) {
-    font-size: 16px;
+    font-size: 20px;
   }
 }
 
@@ -175,35 +176,6 @@ body {
 
 }
 
-.btn {
-  padding-right: 50px;
-  height: 120px;
-  background-color: rgba(151, 193, 60, 1);
-  box-shadow: 5px 9px 10px rgba(0, 0, 0, 0.13);
-  position: relative;
-  padding-left: 125px;
-  border: none;
-  font-weight: 500;
-  outline: none;
-  text-align: left;
-  text-transform: uppercase;
-  font-family: "Proxima Nova", serif;
-  cursor: pointer;
-  border-radius: 5px;
-
-  :hover {
-    background-color: rgba(151, 193, 60, .9);
-  }
-
-  &::before {
-    content: "";
-    position: absolute;
-    width: 64px;
-    height: 60px;
-    top: 28px;
-    left: 34px;
-  }
-}
 
 /*------------------------------*/
 
@@ -281,10 +253,6 @@ body {
   align-items: center;
 }
 
-.slider-btn {
-  @include button-bg-icon(#97c13c, #ffffff, "../images/note.svg");
-}
-
 .slider__pager {
   font-size: 20px;
   line-height: 36px;
@@ -292,17 +260,27 @@ body {
 }
 
 .slider__text {
-  height: 198px;
-  width: 1040px;
+  max-height: 198px;
+  max-width: 1040px;
   background-color: #ffffff;
   border-radius: 5px;
   color: #30323a;
   font-family: 'Proxima Nova Rg', serif;
-  line-height: 36px;
-  font-size: 28px;
-  padding: 80px 60px 53px;
+  line-height: 1.3em;
+  font-size: 0.8em;
+  padding: 5% 4% 3%;
+/*  @media (max-width: 1900px) {
+    font-size: 26px;
+  }
+  @media (max-width: 1400px) {
+    font-size: 20px;
+  }*/
+
 }
 
+.slider-btn {
+  @include button-bg-icon(#97c13c, #ffffff, "../images/note.svg");
+}
 
 // ------------------------------------------
 
@@ -319,19 +297,23 @@ body {
   }
 
   &__title {
-    font-size: 56px;
+    font-size: 2em;
     font-weight: 700;
-    line-height: 90px;
+    line-height: 1.5em;
     text-transform: uppercase;
     letter-spacing: 1.12px;
-    margin-bottom: 68px;
+    margin-bottom: 1.1em;
+
+/*    @media (max-width: 1900px) {
+      font-size: 26px;
+    }*/
   }
 
   &__description {
-    font-size: 32px;
+    font-size: 1.14em;
     font-weight: 400;
-    line-height: 56px;
-    margin-bottom: 62px;
+    line-height: 1.7em;
+    margin-bottom: 2em;
   }
 }
 
