--- a/styles/_mixins.scss
+++ b/styles/_mixins.scss
@@ -5,7 +5,7 @@
   padding: 50px 50px 50px 125px;
   color: $color;
   max-width: 516px;
-  font-size: 0.93em;
+  font-size: 24px;
   border: none;
   outline: none;
   text-transform: uppercase;
@@ -15,7 +15,7 @@
   transition: all 0.3s ease;
 
   @media (max-width: 1200px) {
-    padding: 25px 25px 25px 62.5px;
+    padding: 20px 25px 20px 62.5px;
 
   }
 
