--- a/styles/main.scss
+++ b/styles/main.scss
@@ -29,7 +29,6 @@ h1, h2, h3, h4, h5, h6 {
   padding: 0;
 }
 
-
 p {
   margin: 0;
   padding: 0;
@@ -52,7 +51,6 @@ p {
   @media screen and (max-width: 1200px) {
     max-width: 992px;
     padding: 0 60px;
-
   }
   @media screen and (max-width: 992px) {
     max-width: 768px;
@@ -340,25 +338,20 @@ body {
   &__inner {
     display: flex;
     justify-content: space-between;
-    padding-top: 152px
+    padding-top: 152px;
+
+    @media (max-width: 992px) {
+      flex-direction: column;
+      padding-top: 50px;
+    }
   }
+
 }
 
 .address {
 
-  &__list {
-
-    &-title {
-      font-size: 28px;
-      color: rgba(255, 255, 255, .5);
-      font-weight: 700;
-      text-transform: uppercase;
-    }
-  }
-
   &__link {
     color: #ffffff;
-    font-size: 28px;
     font-weight: 700;
     text-transform: uppercase;
     line-height: 64px;
@@ -366,25 +359,50 @@ body {
   }
 
   &__list {
-    width: 250px;
+    width: 350px;
+    @media (max-width: 992px) {
+      width: 100%;
+    }
+
+    &-title {
+      color: rgba(255, 255, 255, .5);
+      font-weight: 700;
+      text-transform: uppercase;
+      @media (max-width: 1200px) {
+        font-size: 1.5em;
+      }
+    }
 
     &-address {
       margin-bottom: 80px;
+      width: 250px;
+      @media (max-width: 1200px) {
+        margin-bottom: 40px;
+        width: 100%;
+      }
+      @media (max-width: 992px) {
+        margin-bottom: 20px;
+      }
     }
 
     &-phone {
       margin-bottom: 50px;
+      @media (max-width: 1200px) {
+        margin-bottom: 25px;
+      }
+      @media (max-width: 992px) {
+        margin-bottom: 15px;
+      }
     }
   }
 
-
-  &__address__address {
-
-  }
 }
 
 .social {
   display: inline-block;
+  @media (max-width: 992px) {
+    margin-bottom: 20px;
+  }
 
   &__link {
     display: inline-block;
@@ -398,6 +416,7 @@ body {
 
 .form {
   text-align: left;
+  max-width: 1240px;
 
   &__text, &__name, &__email {
     background-color: rgba(255, 255, 255, .1);
@@ -406,38 +425,59 @@ body {
     outline: none;
     caret-color: #ffffff;
     color: #ffffff;
+    @media (max-width: 1200px) {
+      padding: 0 10px 0 20px;
+    }
 
     &::placeholder {
       color: #ffffff;
       font-size: 24px;
+      font-weight: 400;
       line-height: 36px;
       text-transform: uppercase;
-
+      @media (max-width: 1200px) {
+        font-size: 20px;
+        line-height: 24px;
+      }
     }
   }
 
   &__text {
-    width: 1240px;
+    width: 100%;
     height: 317px;
     padding-top: 55px;
     resize: none;
     margin-bottom: 39px;
+    @media (max-width: 1200px) {
+      margin-bottom: 20px;
+      height: 255px;
+    }
   }
 
   &__name {
-    width: 600px;
     height: 103px;
-    margin-bottom: 38px;
+    margin-right: 40px;
+    width: 48%;
+    @media (max-width: 1200px) {
+      height: 70px;
+    }
   }
 
   &__email {
-    width: 600px;
+    width: 48%;
     height: 103px;
+    @media (max-width: 1200px) {
+      height: 70px;
+    }
   }
 
   &__box {
     display: flex;
     justify-content: space-between;
+    margin-bottom: 38px;
+    @media (max-width: 1200px) {
+      margin-bottom: 20px;
+    }
   }
 
   &__btn {
@@ -448,19 +488,35 @@ body {
 
 .footer__bottom {
   padding-top: 165px;
+  @media (max-width: 1200px) {
+    padding-top: 100px;
+  }
 
   &-inner {
     display: flex;
     justify-content: space-between;
+    @media (max-width: 992px) {
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+    }
   }
 
   &-left {
     text-align: left;
+    @media (max-width: 992px) {
+      text-align: center;
+    }
   }
 
   &-right {
     text-align: right;
-    width: 570px;
+    max-width: 570px;
+    @media (max-width: 992px) {
+      text-align: center;
+      margin-bottom: 30px;
+    }
   }
 
   &-btn-box {
@@ -469,23 +525,27 @@ body {
 
   &-phone {
     color: #ffffff;
-    font-size: 52px;
+    font-size: 1.9em;
     font-weight: 400;
-    line-height: 56px;
-    text-align: left;
+    line-height: 1.1em;
     display: block;
     margin-bottom: 51px;
+    @media (max-width: 1200px) {
+      margin-bottom: 25px;
+    }
   }
 
   &-mail {
     width: 460px;
     color: #ffffff;
-    font-size: 52px;
+    font-size: 1.9em;
     font-weight: 400;
-    line-height: 56px;
-    text-align: left;
+    line-height: 1.1em;
     display: block;
     margin-bottom: 69px;
+    @media (max-width: 1200px) {
+      margin-bottom: 35px;
+    }
   }
 
   &-btn {
@@ -495,27 +555,33 @@ body {
     height: 100px;
     line-height: 100px;
     padding: 0 34px;
+    @media (max-width: 1200px) {
+      margin-bottom: 60px;
+    }
   }
 
 }
 
 
 .footer__date {
-  font-size: 36px;
-  line-height: 56px;
+  font-size: 1.28em;
+  line-height: 2em;
   color: rgba(255, 255, 255, .5);
   margin-bottom: 33px;
+  @media (max-width: 1200px) {
+    margin-bottom: 16px;
+  }
 }
 
 .footer__date-text {
   color: #ffffff;
-  font-size: 40px;
-  line-height: 46px;
+  font-size: 1.4em;
+  line-height: 1em;
 }
 
 .footer__copyright {
   margin-bottom: 44px;
-  font-size: 36px;
+  font-size: 1.3em;
   color: #8a8a8a;
 }
 
